--- a/cloud-build/cloudbuild.yaml
+++ b/cloud-build/cloudbuild.yaml
@@ -1,6 +1,9 @@
 steps:
-- name: 'gcr.io/cloud-builders/curl'
-  args: ['-v', 'http://service.onprem']
+- id: step1.1
+  name: 'gcr.io/cloud-builders/curl'
+  args: ['-v', '-k', 'https://github.onprem/api/v3/meta']
+
 options:
+  logging: CLOUD_LOGGING_ONLY
   pool:
-    name: 'projects/usecase-eu-dev/locations/europe-west2/workerPools/usecase-private-pool'
+    name: 'projects/usecase-eu-dev/locations/europe-west2/workerPools/private-pool'
